# microblog-demo

./: .gitignore  README.md  db.sql  pyproject.toml
src/: broker.py  config.py  db_setup.py  post.py  server.py  setup.py  shared.py
templates/: home.html  login.html  post.html  setup.html
